--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "keypix-ui",
     "private": false,
-    "version": "0.0.8",
+    "version": "0.0.9",
     "main": "dist/Button.cjs",
     "module": "dist/Button.js",
     "types": "dist/Button.d.ts",
@@ -22,6 +22,11 @@
         "build": "tsup src/components/ui --dts --format esm,cjs --out-dir dist",
         "lint": "eslint .",
         "preview": "vite preview"
+    },
+    "peerDependencies": {
+        "react": ">=18.0.0",
+        "react-dom": ">=18.0.0",
+        "tailwindcss": ">=3.0.0"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
