--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@keypix/ui",
     "private": false,
-    "version": "1.0.1",
-    "description": "A premium React component library built with TypeScript, Tailwind CSS, and Atomic Design principles. The most comprehensive and beautiful UI library available.",
+    "version": "1.3.0",
+    "description": "A premium React component library built with TypeScript, Pure CSS, and Atomic Design principles. The most comprehensive and beautiful UI library available.",
     "author": {
         "name": "Keypix Technologies",
         "email": "keypixteam@gmail.com",
@@ -76,7 +76,6 @@
     "devDependencies": {
         "@eslint/js": "^9.30.1",
         "@size-limit/preset-big-lib": "^11.0.0",
-        "@tailwindcss/vite": "^4.1.11",
         "@testing-library/jest-dom": "^6.1.4",
         "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.1",
@@ -87,7 +86,6 @@
         "@types/testing-library__react": "^10.0.1",
         "@vitejs/plugin-react": "^4.6.0",
         "autoprefixer": "^10.4.21",
-        "class-variance-authority": "^0.7.1",
         "eslint": "^9.30.1",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
@@ -96,7 +94,6 @@
         "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8.5.6",
         "size-limit": "^11.0.0",
-        "tailwindcss": "^4.1.11",
         "ts-jest": "^29.4.0",
         "tsup": "^8.5.0",
         "typescript": "~5.8.3",
@@ -109,7 +106,6 @@
         "ui",
         "components",
         "design-system",
-        "tailwindcss",
         "atomic-design",
         "dark-mode",
         "accessibility",
@@ -122,8 +118,8 @@
         "enterprise-ui",
         "responsive-design",
         "mobile-first",
-        "css-in-js",
-        "utility-first",
+        "pure-css",
+        "css-variables",
         "optimized",
         "performance",
         "lightweight",
